--- a/battle.html
+++ b/battle.html
@@ -578,6 +578,8 @@
     renderAll();
   }
 });
+      panel.appendChild(attackBtn);
+    });
 
     // Defend button
     const defendBtn = document.createElement('div');
