--- a/battle.html
+++ b/battle.html
@@ -264,6 +264,182 @@
     background: radial-gradient(circle, rgba(139, 69, 19, 0.3) 0%, rgba(139, 69, 19, 0.1) 50%, transparent 100%);
   }
 }
+/* Desktop version remains unchanged above this point */
+
+/* Mobile-specific overrides - only apply on mobile devices */
+@media (max-width: 768px) {
+  /* Allow scrolling on mobile */
+  html, body { 
+    overflow-y: auto !important; 
+    overflow-x: hidden !important; 
+  }
+  
+  /* Compact layout for mobile */
+  .wrap { 
+    padding: 8px !important; 
+    height: auto !important; 
+    min-height: 100vh !important;
+  }
+  
+  .title { font-size: 14px !important; }
+  
+  .turn-indicator { 
+    top: 10px !important; 
+    font-size: 10px !important; 
+    padding: 6px 12px !important;
+  }
+  
+  .arena { 
+    gap: 8px !important; 
+    padding: 8px !important;
+    flex: none !important;
+  }
+  
+  /* Mobile area layout */
+  .area { 
+    flex-direction: column !important; 
+    gap: 8px !important; 
+    padding: 8px !important;
+  }
+  
+  .player-info { 
+    min-width: 120px !important; 
+    order: -1 !important;
+  }
+  
+  .name { font-size: 11px !important; }
+  
+  .hp-bar { 
+    width: 120px !important; 
+    height: 16px !important;
+  }
+  
+  .hp-segments { width: 90% !important; gap: 1px !important; }
+  .seg { height: 12px !important; }
+  
+  /* Mobile slots */
+  .slots { 
+    flex-wrap: wrap !important; 
+    gap: 6px !important; 
+    justify-content: center !important;
+  }
+  
+  .slot { 
+    width: 60px !important; 
+    height: 85px !important;
+  }
+  
+  .slot .card { 
+    width: 56px !important; 
+    height: 78px !important;
+  }
+  
+  .card .stats { 
+    font-size: 7px !important; 
+    padding: 2px !important;
+  }
+  
+  /* Mobile hand */
+  .hand { 
+    min-height: 90px !important; 
+    gap: 6px !important;
+    order: 1 !important;
+  }
+  
+  /* Mobile turn panel */
+  .turn-panel { 
+    bottom: 10px !important; 
+    gap: 8px !important;
+  }
+  
+  .btn { 
+    padding: 8px 12px !important; 
+    font-size: 9px !important;
+  }
+  
+  /* Mobile action panel - bottom center */
+  .card-action-panel { 
+    position: fixed !important;
+    bottom: 60px !important;
+    left: 50% !important;
+    transform: translateX(-50%) !important;
+    top: auto !important;
+    right: auto !important;
+    max-width: 280px !important;
+    min-width: 200px !important;
+  }
+  
+  .card-action-panel .btn { 
+    font-size: 8px !important; 
+    padding: 4px 8px !important;
+  }
+  
+  /* Mobile status icons */
+  .status-icon { 
+    width: 16px !important; 
+    height: 16px !important; 
+    font-size: 10px !important;
+    top: -12px !important;
+  }
+  
+  /* Mobile log - bottom overlay instead of right side */
+  .log { 
+    position: fixed !important;
+    bottom: 0 !important;
+    right: 0 !important;
+    left: 0 !important;
+    top: auto !important;
+    width: 100% !important;
+    height: 120px !important;
+    background: rgba(0,0,0,0.9) !important;
+    border: none !important;
+    border-top: 2px solid #fff !important;
+    padding: 6px !important;
+    font-size: 9px !important;
+    z-index: 40 !important;
+    border-radius: 0 !important;
+    overflow-y: auto !important;
+  }
+  
+  .log .entry { 
+    margin-bottom: 3px !important; 
+    line-height: 1.2 !important;
+  }
+  
+  /* Adjust panels to not overlap mobile log */
+  .turn-panel { 
+    bottom: 130px !important;
+  }
+  
+  .card-action-panel { 
+    bottom: 140px !important;
+  }
+}
+
+/* Very small mobile screens */
+@media (max-width: 480px) {
+  .title { font-size: 12px !important; }
+  
+  .slot { 
+    width: 50px !important; 
+    height: 72px !important;
+  }
+  
+  .slot .card { 
+    width: 46px !important; 
+    height: 65px !important;
+  }
+  
+  .card-action-panel { 
+    max-width: 260px !important;
+    min-width: 180px !important;
+  }
+  
+  .card-action-panel .btn { 
+    font-size: 7px !important; 
+    padding: 3px 6px !important;
+  }
+}
 </style>
 </head>
 <body>
