--- a/battle.html
+++ b/battle.html
@@ -416,28 +416,85 @@
   }
 }
 
-/* Very small mobile screens */
-@media (max-width: 480px) {
-  .title { font-size: 12px !important; }
+/* Mobile card sizing fixes */
+@media (max-width: 768px) {
+  /* Mobile hand cards - smaller by default */
+  .hand .card { 
+    width: 45px !important; 
+    height: 62px !important;
+    transition: all 0.3s ease !important;
+  }
   
+  /* Enlarge hand cards when selected */
+  .hand .card.selected { 
+    width: 60px !important; 
+    height: 85px !important;
+    transform: translateY(-8px) scale(1.1) !important;
+    z-index: 200 !important;
+  }
+  
+  /* Larger battlefield slots for better visibility */
   .slot { 
-    width: 50px !important; 
-    height: 72px !important;
+    width: 75px !important; 
+    height: 105px !important;
+  }
+  
+  /* Larger battlefield cards */
+  .slot .card { 
+    width: 70px !important; 
+    height: 98px !important;
+  }
+  
+  /* Adjust card stats text for battlefield cards */
+  .slot .card .stats { 
+    font-size: 8px !important; 
+    padding: 3px !important;
+  }
+  
+  /* Keep hand card stats small */
+  .hand .card .stats { 
+    font-size: 6px !important; 
+    padding: 2px !important;
+  }
+  
+  /* Selected hand card gets readable text */
+  .hand .card.selected .stats { 
+    font-size: 7px !important; 
+    padding: 2px !important;
+  }
+  
+  /* Mobile status icons positioned for larger slots */
+  .status-icon { 
+    width: 18px !important; 
+    height: 18px !important; 
+    font-size: 11px !important;
+    top: -14px !important;
+  }
+}
+
+/* Very small mobile screens - even more compact hand cards */
+@media (max-width: 480px) {
+  /* Extra small hand cards */
+  .hand .card { 
+    width: 38px !important; 
+    height: 54px !important;
+  }
+  
+  /* Selected hand card enlarges more */
+  .hand .card.selected { 
+    width: 55px !important; 
+    height: 78px !important;
+  }
+  
+  /* Battlefield slots stay readable */
+  .slot { 
+    width: 65px !important; 
+    height: 92px !important;
   }
   
   .slot .card { 
-    width: 46px !important; 
-    height: 65px !important;
-  }
-  
-  .card-action-panel { 
-    max-width: 260px !important;
-    min-width: 180px !important;
-  }
-  
-  .card-action-panel .btn { 
-    font-size: 7px !important; 
-    padding: 3px 6px !important;
+    width: 60px !important; 
+    height: 85px !important;
   }
 }
 </style>
